# ElSesgoDelFutbol

./: .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/: copilot-instructions.md
dashboard/: README.md  app.py
dashboard/locales/: en.json  es.json
data_pipeline/: db.py  main.py  view_db.py
scripts/: deploy_to_aws.sh  fix_team_names.py  migrate_multi_team.py  migrate_sqlite_to_pg.py  query_db.sh  run_dashboard.sh  setup_server.sh  update_data.sh  update_server.sh
sentiment_analysis/: label-data.py  test.py
test/: db.py  tutorial.py
