[project]
name = "elsesgodelfutbol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
